tests/fixtures/fail/main_missing.sc
let answer(): i32 = 42
